# avy-logbook

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json  vite.config.js
back_end/: Cargo.toml
backend/: .env  Cargo.toml  README.md
backend/src/: db_client.rs  errors.rs  main.rs  routes.rs  services.rs  shared_state.rs
backend/src/api/: public.rs
backend/src/auth/: backend.rs  sessions.rs
backend/src/database/: mod.rs  setup.rs
backend/src/database/models/: user.rs
backend/src/middlewares/: authenticator.rs
backend/src/routes/: api.rs  auth.rs
backend_test/: Cargo.toml  README.md  package-lock.json
backend_test/src/: config.rs  dynamodb_store.rs  main.rs
cdk/: README.md  package-lock.json  package.json  tsconfig.json
cdk/lib/: cdk-stack.ts
cdk/test/: cdk.test.ts
front_end/: package-lock.json  package.json
front_end/src/js/: auth.js  fetch.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/routes/app/: +page.svelte  +page.ts
frontend/src/routes/logout/: +page.svelte
frontend/src/routes/privacy-policy/: +page.svelte
src/: app.html  globals.d.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251008022454_create_initial_tables.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: avy_observations.rs  forecast.rs  mod.rs  plan.rs  trips.rs  weather.rs
src/lib/components/: AvyObsForm.svelte  AvyProblemEditor.svelte  Footer.svelte  Header.svelte  WeatherForm.svelte
src/lib/types/: Accumulation.ts  AreaToAvoid.ts  AreasToAvoid.ts  AvalancheForecast.ts  AvalancheProblem.ts  AvalancheSize.ts  AvalancheTrigger.ts  AvyObservation.ts  Confidence.ts  DangerRating.ts  Elevation.ts  FieldObservation.ts  FullTripDetails.ts  InstabilityObservation.ts  MacroTrend.ts  NewAvyObservation.ts  NewWeather.ts  Precipitation.ts  ProblemType.ts  SolarRadiation.ts  TestResult.ts  Trip.ts  TripPlan.ts  TripPlanning.ts  Weather.ts  WindDirection.ts  WindSpeed.ts
src/lib/utils/: types.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts  lib.ts
src/routes/logs/: +page.svelte
src/routes/logs/[logId]/: +page.svelte  +page.ts
src/routes/logs/[logId]/edit/avy/: +page.svelte
src/routes/logs/new/: +page.svelte
src/routes/trips/[tripId]/: +page.svelte  +page.ts
src/routes/trips/[tripId]/avy/: +page.svelte  +page.ts
src/routes/trips/[tripId]/avy_obs/[avyObsId]/: +page.svelte  +page.ts
src/routes/trips/[tripId]/avy_obs/new/: +page.svelte  +page.ts
src/routes/trips/[tripId]/edit/avy/: +page.svelte  +page.ts
src/routes/trips/[tripId]/plan/: +page.svelte  +page.ts
src/routes/trips/[tripId]/weather/[weatherId]/: +page.svelte  +page.ts
src/routes/trips/[tripId]/weather/new/: +page.svelte  +page.ts
src/routes/trips/new/: +page.svelte
