[package]
name = "avy-logbook"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/jordanheinrichs/avy-logbook"
keywords = ["template", "backend", "frontend", "axum", "svelte"]
license = "MIT"
categories = []
description = ""
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version="0.6.1", features = ["headers"] }
tower-http = { version = "0.3", features = ["full"] }
axum-sessions = "0.4"
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
