[package]
name = "avy_logbook_backend"
version = "0.0.1"
authors = ["Jordan Heinrichs <mail@jordanheinrichs.com>"]
description = "Online collaborative logbook for backcountry skiing."
keywords = ["starter", "fullstack", "web-application", "rust", "axum", "sevlte"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/JordanHeinrichs/avy-logbook"
edition = "2021"
rust-version = "1.82"

[dependencies]
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.52.0"
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
axum-login = "0.15.3"
http = "1.1.0"
lambda_http = { version = "0.13.0", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.13.0"
password-auth = "1.0.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-gzip",
    "cors",
    "limit",
    "fs",
] }
tower-sessions = { version = "0.12.2", features = ["private"] }
tower-sessions-core = "0.12.2"
tower-sessions-dynamodb-store = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
