[package]
name = "backend_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.35.0"
axum = "0.6.20"
lambda_http = { version = "0.8.1", features = ["apigw_http"] }
lambda_runtime = "0.8.2"
rmp-serde = "1.1.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_35"] }
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = "0.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
