[package]
name = "backend_test"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.36.0"
axum = "0.7.5"
lambda_http = { version = "0.12.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.12.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
