[package]
name = "backend_test"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.52.0"
axum = "0.7.7"
lambda_http = { version = "0.13.0", default-features = false, features = [
    "apigw_http",
] }
lambda_runtime = "0.13.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
anyhow = "1.0.92"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-sessions = "0.13.0"
tower-sessions-dynamodb-store = "0.2.0"
